--- a/es6.html
+++ b/es6.html
@@ -33,15 +33,15 @@
 			return h!=30
 		})
 		console.log(s)*/
-		/*setTimeout(()=>{
+		setTimeout(()=>{
 			console.log("amazon")
-		},4000)
+		},2000)
 		console.log("flipkart")
 		console.log("snapdeal")
-		*/
-		var a=[40,50,60,7,9],b=[true,false],c=[]
+		
+		/*/var a=[40,50,60,7,9],b=[true,false],c=[]
 		c=[...a,...b]
-		console.log(c)
+		console.log(c)*/
 	</script>
 </body>
 </html>
